fix some layout issues for letter descriptions that fall onto multiple lines

--- a/sass/_screens.scss
+++ b/sass/_screens.scss
@@ -68,7 +68,11 @@
 		
 		button {
 			display: block;
-			margin: 1em auto;
+			margin: 0 auto;
 		}
+	}
+	
+	.letter-description {
+		height: 2.5em;
 	}
 }
